--- a/ui/style.css
+++ b/ui/style.css
@@ -20,3 +20,11 @@ body {
     height: 200px;
 }
 
+.container{
+    max-width: 800px;
+    margin: 0 auto;
+    color: grey;
+    padding: 60 20 0 20;
+    font-family: sans-serif;
+}
+
